omg a more simple fix than i realized- vertically align card image to bottom

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -604,8 +604,7 @@ ul.row {
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    bottom: 0;
-    position: fixed;
+    vertical-align: bottom;
 }
 .card-work .card-inner {
     position: absolute;
